"fixed overflow issue with the turblent lines img in about me section"

--- a/src/about/about.component.css
+++ b/src/about/about.component.css
@@ -111,7 +111,7 @@
 .linesimg {
     position: absolute;
     min-width: 700px;
-    width: 50%;
+    width: 40%;
     margin-left: auto;
     right: 0;
     img {
@@ -145,7 +145,7 @@
 
         .linesimg {
             right: inherit !important;
-            width: 100%;
+            width: 80%;
             min-width: initial !important;
         }
 
